<resources>
    <string name="app_name">Converter</string>
    <string name="welcome">Welcome to converter!</string>
    <string name="welcome_text">Choose the category for conversion:</string>
    <string name="weight">Weight</string>
    <string name="distance">Distance</string>
    <string name="currency">Currency</string>

    <string-array name="dist_array">
        <item>km</item>
        <item>mile</item>
        <item>ft</item>
    </string-array>

    <string-array name="weight_array">
        <item>kg</item>
        <item>lb</item>
        <item>oz</item>
    </string-array>

    <string-array name="currency_array">
        <item>rub</item>
        <item>euro</item>
        <item>dollars</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
